@@ -1,5 +1,6 @@
 2006-07-17  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/NarrativeWeb.py: typo
+	* src/plugins/NarrativeWeb.py: fix name sorting in Windows (bug #236)
 
 2006-07-16  Alex Roitman  <shura@gramps-project.org>
 	* src/DisplayTabs/_GalleryTab.py (GalleryTab.build_interface):
